--- a/config.example.json
+++ b/config.example.json
@@ -3,8 +3,10 @@
   "discordToken": "",
   "twitchBotUsername": "",
   "twitchChannel": "",
+  "twitchChannelId": "",
   "twitchSecret": "",
   "twitchClientId": "",
   "facebookAppId": "",
-  "facebookAppSecret": ""
+  "facebookAppSecret": "",
+  "fortniteApiKey": ""
 }
