--- a/SpyderWeb.DiscordMessageSender/SpyderWeb.DiscordMessageSender.csproj
+++ b/SpyderWeb.DiscordMessageSender/SpyderWeb.DiscordMessageSender.csproj
@@ -6,12 +6,10 @@
 
   <ItemGroup>
     <PackageReference Include="Discord.Net" Version="1.0.2" />
-    <PackageReference Include="Discord.Net.Core" Version="1.0.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SpyderWeb.ModuleBase\SpyderWeb.ModuleBase.csproj" />
-    <ProjectReference Include="..\SpyderWeb.TagService\SpyderWeb.TagService.csproj" />
+    <ProjectReference Include="..\SpyderWeb.Configurations\SpyderWeb.Configurations.csproj" />
   </ItemGroup>
 
 </Project>
