--- a/SpyderWeb.TagService/SpyderWeb.TagService.csproj
+++ b/SpyderWeb.TagService/SpyderWeb.TagService.csproj
@@ -6,12 +6,12 @@
 
   <ItemGroup>
     <PackageReference Include="Discord.Net" Version="1.0.2" />
-    <PackageReference Include="Discord.Net.Core" Version="1.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\SpyderWeb.Database\SpyderWeb.Database.csproj" />
     <ProjectReference Include="..\SpyderWeb.ModuleBase\SpyderWeb.ModuleBase.csproj" />
-    <ProjectReference Include="..\SpyderWeb.TagService\SpyderWeb.TagService.csproj" />
   </ItemGroup>
 
 </Project>
