--- a/SpyderWeb/SpyderWeb.csproj
+++ b/SpyderWeb/SpyderWeb.csproj
@@ -1,14 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk;Microsoft.NET.Sdk.Publish">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Discord.Net" Version="1.0.2" />
     <PackageReference Include="Discord.Net.Commands" Version="1.0.2" />
     <PackageReference Include="Discord.Net.WebSocket" Version="1.0.2" />
+    <PackageReference Include="FortniteApi" Version="1.2.0" />
     <PackageReference Include="LiteDB" Version="4.1.4" />
-    <PackageReference Include="Microsoft.AspNet.Facebook" Version="1.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
@@ -19,9 +19,17 @@
     <PackageReference Include="TwitchLib" Version="3.0.1" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\SpyderWeb.Configurations\SpyderWeb.Configurations.csproj" />
+    <ProjectReference Include="..\SpyderWeb.Database\SpyderWeb.Database.csproj" />
+    <ProjectReference Include="..\SpyderWeb.DiscordMessageSender\SpyderWeb.DiscordMessageSender.csproj" />
     <ProjectReference Include="..\SpyderWeb.EmojiTools\SpyderWeb.EmojiTools.csproj" />
+    <ProjectReference Include="..\SpyderWeb.FacebookCore\SpyderWeb.FacebookCore.csproj" />
     <ProjectReference Include="..\SpyderWeb.Helpers\SpyderWeb.Helpers.csproj" />
     <ProjectReference Include="..\SpyderWeb.MicrosoftLogging\SpyderWeb.MicrosoftLogging.csproj" />
+    <ProjectReference Include="..\SpyderWeb.Models\SpyderWeb.Models.csproj" />
+    <ProjectReference Include="..\SpyderWeb.TagService\SpyderWeb.TagService.csproj" />
+    <ProjectReference Include="..\SpyderWeb.TwitchBot\SpyderWeb.DiscordBot.csproj" />
+    <ProjectReference Include="..\SpyderWeb.Twitch\SpyderWeb.Twitch.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Update="Settings.job">
