Started working toward better implementation of bot

--- a/SpyderWeb.TwitchBot/SpyderWeb.Discord.csproj
+++ b/SpyderWeb.TwitchBot/SpyderWeb.Discord.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
@@ -25,6 +25,7 @@
     <ProjectReference Include="..\SpyderWeb.EmojiTools\SpyderWeb.EmojiTools.csproj" />
     <ProjectReference Include="..\SpyderWeb.Events\SpyderWeb.Events.csproj" />
     <ProjectReference Include="..\SpyderWeb.Overwatch\SpyderWeb.Overwatch.csproj" />
+    <ProjectReference Include="..\SpyderWeb.CoreModules\SpyderWeb.CoreModules.csproj" />
   </ItemGroup>
 
   <ItemGroup>
