--- a/SpyderWeb/SpyderWeb.csproj
+++ b/SpyderWeb/SpyderWeb.csproj
@@ -20,13 +20,12 @@
   <ItemGroup>
     <ProjectReference Include="..\SpyderWeb.Configurations\SpyderWeb.Configurations.csproj" />
     <ProjectReference Include="..\SpyderWeb.Database\SpyderWeb.Database.csproj" />
-    <ProjectReference Include="..\SpyderWeb.DiscordMessageSender\SpyderWeb.DiscordMessageSender.csproj" />
     <ProjectReference Include="..\SpyderWeb.EmojiTools\SpyderWeb.EmojiTools.csproj" />
     <ProjectReference Include="..\SpyderWeb.FacebookCore\SpyderWeb.FacebookCore.csproj" />
     <ProjectReference Include="..\SpyderWeb.Helpers\SpyderWeb.Helpers.csproj" />
     <ProjectReference Include="..\SpyderWeb.Models\SpyderWeb.Models.csproj" />
     <ProjectReference Include="..\SpyderWeb.Overwatch\SpyderWeb.Overwatch.csproj" />
-    <ProjectReference Include="..\SpyderWeb.TwitchBot\SpyderWeb.Discord.csproj" />
+    <ProjectReference Include="..\SpyderWeb.Discord\SpyderWeb.Discord.csproj" />
     <ProjectReference Include="..\SpyderWeb.Twitch\SpyderWeb.Twitch.csproj" />
   </ItemGroup>
   <ItemGroup>
