--- a/SpyderWeb.Discord/SpyderWeb.Discord.csproj
+++ b/SpyderWeb.Discord/SpyderWeb.Discord.csproj
@@ -14,9 +14,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Discord.Net" Version="2.0.0" />
+    <PackageReference Include="Discord.Net" Version="2.0.1" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="2.2.0" />
+    <PackageReference Include="Automapper" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
