Added DockerFile to Publish location

--- a/SpyderWeb/SpyderWeb.csproj
+++ b/SpyderWeb/SpyderWeb.csproj
@@ -30,5 +30,6 @@
   <ItemGroup>
     <None Update="Settings.job" CopyToOutputDirectory="Always" />
     <Content Include="../*.json" CopyToOutputDirectory="Always" CopyToPublishDirectory="Always" />
+    <Content Include="../DockerFile" CopyToOutputDirectory="Always" CopyToPublishDirectory="Always" />
   </ItemGroup>
 </Project>
