--- a/DockerFile
+++ b/DockerFile
@@ -1,3 +1,22 @@
+# FROM mcr.microsoft.com/dotnet/core/aspnet:2.2 AS runtime
+# WORKDIR /app
+# COPY ./SpyderWeb/SpyderWeb ./
+# ENTRYPOINT ["dotnet", "SpyderWeb.dll"]
+
+FROM mcr.microsoft.com/dotnet/core/sdk:2.2 AS build
+WORKDIR /app
+
+# copy csproj and restore as distinct layers
+COPY *.sln .
+COPY SpyderWeb/*.csproj ./SpyderWeb/
+RUN dotnet restore
+
+# copy everything else and build app
+COPY SpyderWeb/. ./SpyderWeb/
+WORKDIR /app/SpyderWeb
+RUN dotnet publish -c Release -o out
+
+
 FROM mcr.microsoft.com/dotnet/core/aspnet:2.2 AS runtime
 WORKDIR /app
 COPY --from=build /app/SpyderWeb/out ./
