--- a/DockerFile
+++ b/DockerFile
@@ -7,12 +7,12 @@ FROM mcr.microsoft.com/dotnet/core/sdk:2.2 AS build
 # WORKDIR /app
 
 # copy csproj and restore as distinct layers
-# COPY *.sln .
-# COPY SpyderWeb*/*.csproj ./SpyderWeb*/
+COPY *.sln .
+COPY SpyderWeb*/*.csproj ./SpyderWeb*/
 # RUN dotnet restore
 
 # copy everything else and build app
-# COPY SpyderWeb*/. ./SpyderWeb*/
+COPY SpyderWeb*/. ./SpyderWeb*/
 # WORKDIR /app/SpyderWeb
 RUN dotnet publish -c Release -o out
 
