--- a/DockerFile
+++ b/DockerFile
@@ -8,11 +8,11 @@ FROM mcr.microsoft.com/dotnet/core/sdk:2.2 AS build
 
 # copy csproj and restore as distinct layers
 COPY *.sln .
-COPY SpyderWeb*/*.csproj ./SpyderWeb*/
+COPY SpyderWeb*/* ./SpyderWeb*/
 # RUN dotnet restore
 
 # copy everything else and build app
-COPY SpyderWeb*/. ./SpyderWeb*/
+# COPY SpyderWeb*/. ./SpyderWeb*/
 # WORKDIR /app/SpyderWeb
 RUN dotnet publish -c Release -o out
 
