--- a/DockerFile
+++ b/DockerFile
@@ -4,11 +4,12 @@
 # ENTRYPOINT ["dotnet", "SpyderWeb.dll"]
 
 FROM mcr.microsoft.com/dotnet/core/sdk:2.2 AS build
-# WORKDIR /app
+WORKDIR /app
 
 # copy csproj and restore as distinct layers
-COPY *.sln .
+COPY * .
 COPY SpyderWeb*/* ./SpyderWeb*/
+RUN ls .
 # RUN dotnet restore
 
 # copy everything else and build app
