--- a/DockerFile
+++ b/DockerFile
@@ -7,7 +7,7 @@ FROM mcr.microsoft.com/dotnet/core/sdk:2.2 AS build
 WORKDIR /app
 
 # copy csproj and restore as distinct layers
-COPY * .
+COPY * ./
 COPY SpyderWeb*/* ./SpyderWeb*/
 RUN ls .
 # RUN dotnet restore
