--- a/DockerFile
+++ b/DockerFile
@@ -7,9 +7,11 @@ FROM mcr.microsoft.com/dotnet/core/sdk:2.2 AS build
 WORKDIR /app
 
 # copy csproj and restore as distinct layers
+RUN ls -R
 COPY * ./
+RUN ls -R .
 COPY SpyderWeb*/* ./SpyderWeb*/
-RUN ls .
+RUN ls -R ./SpyderWeb*
 # RUN dotnet restore
 
 # copy everything else and build app
