--- a/DockerFile
+++ b/DockerFile
@@ -6,18 +6,9 @@
 FROM mcr.microsoft.com/dotnet/core/sdk:2.2 AS build
 WORKDIR /app
 
-# copy csproj and restore as distinct layers
-RUN ls -R
 COPY * ./
-RUN ls -R .
-COPY SpyderWeb*/* ./SpyderWeb*/
-RUN ls -R ./SpyderWeb*
-# RUN dotnet restore
-
-# copy everything else and build app
-# COPY SpyderWeb*/. ./SpyderWeb*/
-# WORKDIR /app/SpyderWeb
-RUN dotnet publish -c Release -o out
+RUN ls -l .
+RUN dotnet publish SpyderWeb.csproj -c Release -o out
 
 
 FROM mcr.microsoft.com/dotnet/core/aspnet:2.2 AS runtime
