--- a/DockerFile
+++ b/DockerFile
@@ -1,24 +1,11 @@
-# FROM mcr.microsoft.com/dotnet/core/aspnet:2.2 AS runtime
-# WORKDIR /app
-# COPY ./SpyderWeb/SpyderWeb ./
-# ENTRYPOINT ["dotnet", "SpyderWeb.dll"]
-
-FROM mcr.microsoft.com/dotnet/core/sdk:2.2 AS build
-WORKDIR /src/
-COPY ./ .
-
-RUN dotnet restore
-RUN dotnet publish SpyderWeb.sln --output /src/out
-
+FROM microsoft/dotnet:2.2-sdk
 WORKDIR /app
-COPY --from=build /src/out ./
 
-# COPY SpyderWeb/* ./SpyderWeb/*
-# COPY SpyderWeb./* ./SpyderWeb/*
-# RUN ls -l .
-# RUN dotnet publish SpyderWeb.sln -c Release -o out
+# copy csproj and restore as distinct layers
+COPY ./ .
+RUN dotnet restore
 
-# FROM mcr.microsoft.com/dotnet/core/aspnet:2.2 AS runtime
-# WORKDIR /app
-# COPY --from=build /app/SpyderWeb/out ./
-ENTRYPOINT ["dotnet", "SpyderWeb.dll"]
+# copy and build everything else
+COPY . ./
+RUN dotnet publish -c Release -o out
+ENTRYPOINT ["dotnet", "SpyderWeb/out/SpyderWeb.dll"]
