Added ARG to DockerFile

--- a/DockerFile
+++ b/DockerFile
@@ -8,4 +8,5 @@ RUN dotnet restore
 # copy and build everything else
 COPY . ./
 RUN dotnet publish -c Release -o out
+ARG DiscordToken
 ENTRYPOINT ["dotnet", "SpyderWeb/out/SpyderWeb.dll", "--discordToken", "${DiscordToken}"]
